# databricks-lakebase

./: .env.example  .gitignore  README.md  app.yaml  databricks.yaml  pyproject.toml
backend/: app.py
backend/config/: database.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js
scripts/: clean.py  deploy.py  preflight.py  quickstart.py  start_app.py
