[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lakebase"
version = "0.1.0"
description = "A template for building applications with Databricks Lakebase"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "databricks-sdk>=0.60.0",
    "fastapi>=0.115.0",
    "greenlet>=3.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.21",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
quickstart  = "scripts.quickstart:main"
start-app   = "scripts.start_app:main"
preflight   = "scripts.preflight:main"
deploy      = "scripts.deploy:main"
clean       = "scripts.clean:main"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend", "scripts"]